--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,6 @@
     .app {
       width: 100%;
       max-width: 480px;
-      min-height: 100vh;
       border-radius: 28px;
       background: rgba(15, 23, 42, 0.92);
       border: 1px solid rgba(51, 65, 85, 0.8);
@@ -48,7 +47,7 @@
 
     header {
       text-align: center;
-      padding: 10px 0 16px;
+      padding: 8px 0 12px;
     }
 
     .app-title {
@@ -67,25 +66,25 @@
       background: var(--card);
       border: 1.2px solid var(--border);
       border-radius: 20px;
-      padding: 28px 18px;
+      padding: 24px 18px; /* 살짝 줄여서 높이 감소 */
       text-align: center;
     }
 
     .upload-icon {
       font-size: 36px;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
       color: var(--accent);
     }
 
     .upload-text {
       font-size: 14px;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
 
     .img-preview {
       width: 100%;
       max-width: 240px;
-      margin: 12px auto;
+      margin: 10px auto;
       border-radius: 16px;
       border: 1px solid rgba(148,163,255,0.7);
       display: none;
@@ -96,8 +95,8 @@
     }
 
     .upload-btn {
-      margin-top: 12px;
-      padding: 10px 14px;
+      margin-top: 10px;
+      padding: 9px 14px;
       background: rgba(255,255,255,0.05);
       border-radius: 12px;
       border: 1px solid rgba(148,163,255,0.3);
@@ -110,7 +109,7 @@
     .section-title {
       font-size: 14px;
       font-weight: 600;
-      margin: 4px 0 10px;
+      margin: 4px 0 8px;
     }
 
     .select-group {
@@ -120,7 +119,7 @@
     }
 
     .select-btn {
-      padding: 10px 16px;
+      padding: 9px 14px;
       border-radius: 14px;
       background: rgba(255,255,255,0.05);
       border: 1px solid rgba(148,163,255,0.25);
@@ -135,12 +134,10 @@
       border-color: transparent;
     }
 
-    /* 결과 보기 버튼 (플로팅 스타일) */
+    /* 결과 보기 버튼 – position: sticky 제거, 위로 살짝 올림 */
     .go-btn {
-      position: sticky;
-      bottom: 14px;
       width: 100%;
-      padding: 15px;
+      padding: 14px;
       font-size: 15px;
       border: none;
       border-radius: 16px;
@@ -148,8 +145,8 @@
       color: #fff;
       box-shadow: 0 12px 28px rgba(248,113,22,0.45);
       cursor: pointer;
-      margin-top: auto;
       font-weight: 600;
+      margin-top: 18px; /* 조금만 위로 */
     }
 
   </style>
@@ -209,8 +206,9 @@
         const reader = new FileReader();
         reader.onload = function (ev) {
           uploadedImage = ev.target.result;
-          document.getElementById("preview").src = uploadedImage;
-          document.getElementById("preview").style.display = "block";
+          const preview = document.getElementById("preview");
+          preview.src = uploadedImage;
+          preview.style.display = "block";
         };
         reader.readAsDataURL(file);
       }
@@ -226,18 +224,17 @@
       if (type === "hair") selectedHair = btn.dataset.value;
     }
 
-    // 다음 페이지 이동
+    // 다음 페이지 이동 + AI 호출
     function goNext() {
       if (!uploadedImage) {
         alert("사진을 업로드해주세요.");
         return;
       }
       if (!selectedGender || !selectedHair) {
-        alert("옵션을 선택해주세요.");
+        alert("성별과 머리 길이를 선택해주세요.");
         return;
       }
 
-      // 서버 호출 준비
       sessionStorage.setItem("basePhoto", uploadedImage);
 
       fetch("/api/hair-preview", {
@@ -249,16 +246,16 @@
           base_style: selectedHair
         })
       })
-      .then(res => res.json())
-      .then(data => {
-        if (data.success) {
-          sessionStorage.setItem("hairStyles", JSON.stringify(data.styles));
-          window.location.href = "/result.html";
-        } else {
-          alert("AI 분석에 실패했습니다.");
-        }
-      })
-      .catch(() => alert("서버 연결 오류"));
+        .then(res => res.json())
+        .then(data => {
+          if (data.success) {
+            sessionStorage.setItem("hairStyles", JSON.stringify(data.styles));
+            window.location.href = "/result.html";
+          } else {
+            alert("AI 분석에 실패했습니다. 다시 시도해 주세요.");
+          }
+        })
+        .catch(() => alert("서버 연결 오류가 발생했습니다."));
     }
   </script>
 </body>
