--- a/public/index.html
+++ b/public/index.html
@@ -39,15 +39,15 @@
       background: rgba(15, 23, 42, 0.92);
       border: 1px solid rgba(51, 65, 85, 0.8);
       backdrop-filter: blur(18px);
-      padding: 18px;
+      padding: 16px; /* 조금 줄임 */
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 14px;
     }
 
     header {
       text-align: center;
-      padding: 8px 0 12px;
+      padding: 6px 0 10px;
     }
 
     .app-title {
@@ -66,26 +66,26 @@
       background: var(--card);
       border: 1.2px solid var(--border);
       border-radius: 20px;
-      padding: 24px 18px; /* 살짝 줄여서 높이 감소 */
+      padding: 16px 14px; /* 🔥 줄임 */
       text-align: center;
     }
 
     .upload-icon {
-      font-size: 36px;
-      margin-bottom: 10px;
+      font-size: 34px; /* 조금 줄임 */
+      margin-bottom: 8px;
       color: var(--accent);
     }
 
     .upload-text {
-      font-size: 14px;
-      margin-bottom: 10px;
+      font-size: 13px;
+      margin-bottom: 8px;
     }
 
     .img-preview {
       width: 100%;
-      max-width: 240px;
-      margin: 10px auto;
-      border-radius: 16px;
+      max-width: 180px; /* 🔥 사진 크기 줄임 */
+      margin: 8px auto;
+      border-radius: 14px;
       border: 1px solid rgba(148,163,255,0.7);
       display: none;
     }
@@ -95,13 +95,13 @@
     }
 
     .upload-btn {
-      margin-top: 10px;
-      padding: 9px 14px;
+      margin-top: 8px;
+      padding: 8px 12px;
       background: rgba(255,255,255,0.05);
       border-radius: 12px;
       border: 1px solid rgba(148,163,255,0.3);
       color: var(--text);
-      font-size: 13px;
+      font-size: 12px;
       cursor: pointer;
     }
 
@@ -109,7 +109,7 @@
     .section-title {
       font-size: 14px;
       font-weight: 600;
-      margin: 4px 0 8px;
+      margin: 4px 0 6px;
     }
 
     .select-group {
@@ -119,7 +119,7 @@
     }
 
     .select-btn {
-      padding: 9px 14px;
+      padding: 8px 14px;
       border-radius: 14px;
       background: rgba(255,255,255,0.05);
       border: 1px solid rgba(148,163,255,0.25);
@@ -134,19 +134,19 @@
       border-color: transparent;
     }
 
-    /* 결과 보기 버튼 – position: sticky 제거, 위로 살짝 올림 */
+    /* 결과 보기 버튼 */
     .go-btn {
       width: 100%;
-      padding: 14px;
+      padding: 13px;
       font-size: 15px;
       border: none;
       border-radius: 16px;
       background: linear-gradient(135deg, var(--accent), var(--accent-strong));
       color: #fff;
-      box-shadow: 0 12px 28px rgba(248,113,22,0.45);
+      box-shadow: 0 10px 24px rgba(248,113,22,0.45);
       cursor: pointer;
       font-weight: 600;
-      margin-top: 18px; /* 조금만 위로 */
+      margin-top: 10px; /* 🔥 더 위로 */
     }
 
   </style>
@@ -199,7 +199,7 @@
     let selectedHair = null;
     let uploadedImage = null;
 
-    // 미리보기
+    // 이미지 미리보기
     document.getElementById("photoInput").addEventListener("change", function (e) {
       const file = e.target.files[0];
       if (file) {
@@ -214,7 +214,6 @@
       }
     });
 
-    // 선택 버튼 토글
     function toggleSelect(btn, type) {
       const group = btn.parentNode.querySelectorAll(".select-btn");
       group.forEach(b => b.classList.remove("active"));
@@ -224,7 +223,6 @@
       if (type === "hair") selectedHair = btn.dataset.value;
     }
 
-    // 다음 페이지 이동 + AI 호출
     function goNext() {
       if (!uploadedImage) {
         alert("사진을 업로드해주세요.");
@@ -252,10 +250,10 @@
             sessionStorage.setItem("hairStyles", JSON.stringify(data.styles));
             window.location.href = "/result.html";
           } else {
-            alert("AI 분석에 실패했습니다. 다시 시도해 주세요.");
+            alert("AI 분석에 실패했습니다.");
           }
         })
-        .catch(() => alert("서버 연결 오류가 발생했습니다."));
+        .catch(() => alert("서버 연결 오류"));
     }
   </script>
 </body>
