--- a/public/result.html
+++ b/public/result.html
@@ -40,103 +40,104 @@
       background: rgba(15, 23, 42, 0.98);
       border-radius: 28px;
       border: 1px solid rgba(30, 64, 175, 0.6);
-      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.9);
+      padding: 14px;
       display: flex;
       flex-direction: column;
-      padding: 14px 14px 12px;
-      backdrop-filter: blur(18px);
+      gap: 12px;
     }
 
     header {
       display: flex;
       align-items: center;
       gap: 10px;
-      padding: 6px 4px 10px;
-      border-bottom: 1px solid rgba(15, 23, 42, 0.9);
-      margin-bottom: 10px;
+      padding-bottom: 10px;
     }
 
     .back-btn {
       width: 30px;
       height: 30px;
       border-radius: 999px;
-      border: 1px solid rgba(51, 65, 85, 0.9);
+      border: 1px solid rgba(55, 65, 81, 0.7);
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       cursor: pointer;
-      background: rgba(15, 23, 42, 0.96);
-      font-size: 16px;
-    }
-
-    .title-wrap {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-    }
-
-    .title {
-      font-size: 16px;
-      font-weight: 600;
-    }
-
-    .sub {
-      font-size: 11px;
-      color: var(--text-sub);
-    }
-
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      overflow-y: auto;
-      padding-bottom: 6px;
     }
 
     .card {
       background: var(--card);
-      border-radius: 20px;
+      padding: 12px;
+      border-radius: 18px;
       border: 1px solid var(--border);
-      padding: 12px 11px;
     }
 
-    .card-title {
-      font-size: 14px;
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-
-    .card-caption {
-      font-size: 11px;
-      color: var(--text-sub);
-      margin-bottom: 10px;
-    }
-
-    .base-photo {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-bottom: 10px;
-    }
-
+    /* 기준 사진 */
     .base-photo img {
       width: 72px;
-      height: 96px;
+      max-height: 96px;
+      object-fit: contain;
       border-radius: 12px;
-      border: 1px solid rgba(148, 163, 255, 0.9);
-      object-fit: cover;
+      border: 1px solid rgba(148,163,255,0.9);
     }
 
-    .base-photo-text {
-      font-size: 11px;
-      color: var(--text-sub);
-      line-height: 1.4;
+    /* 슬라이드 영역 */
+    .slider-wrap {
+      width: 100%;
+      overflow: hidden;
+      border-radius: 20px;
+    }
+
+    .slider {
+      display: flex;
+      gap: 16px;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+    }
+
+    .slider::-webkit-scrollbar {
+      display: none;
+    }
+
+    .slide-card {
+      min-width: 88%;
+      background: var(--card-soft);
+      padding: 10px;
+      border-radius: 16px;
+      border: 1px solid rgba(148,163,255,0.3);
+      scroll-snap-align: center;
+    }
+
+    .slide-card img {
+      width: 100%;
+      height: auto;
+      max-height: 360px;
+      object-fit: contain;
+      border-radius: 14px;
+      border: 1px solid rgba(148,163,255,0.7);
+    }
+
+    .slider-indicator {
+      display: flex;
+      justify-content: center;
+      gap: 6px;
+      margin-top: 6px;
+    }
+
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #475569;
+    }
+
+    .dot.active {
+      background: var(--accent);
+      transform: scale(1.15);
     }
 
     .btn-row {
       display: flex;
-      gap: 8px;
+      gap: 10px;
       margin-top: 10px;
     }
 
@@ -147,169 +148,62 @@
       border-radius: 999px;
       border: none;
       font-size: 13px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
       cursor: pointer;
     }
 
     .btn-primary {
       background: linear-gradient(135deg, var(--accent), var(--accent-strong));
       color: #fff;
-      box-shadow: 0 10px 24px rgba(248, 113, 22, 0.5);
     }
 
     .btn-secondary {
       background: rgba(15, 23, 42, 0.96);
       color: var(--text-sub);
-      border: 1px solid rgba(55, 65, 81, 0.9);
+      border: 1px solid rgba(148,163,255,0.4);
     }
 
-    .foot {
-      margin-top: 4px;
-      font-size: 10px;
-      color: var(--text-sub);
-      text-align: right;
-    }
-
-    .empty {
-      font-size: 12px;
-      color: var(--text-sub);
-      text-align: center;
-      padding: 40px 10px;
-    }
-
-    /* 🔥 슬라이더 영역 */
-    .slider-wrap {
-      width: 100%;
-      overflow: hidden;
-      border-radius: 20px;
-      margin-top: 14px;
-      margin-bottom: 8px;
-    }
-
-    .slider {
-      display: flex;
-      gap: 18px;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      padding-bottom: 12px;
-    }
-
-    .slider::-webkit-scrollbar {
-      display: none;
-    }
-
-    .slide-card {
-      min-width: 88%;
-      flex-shrink: 0;
-      background: var(--card-soft);
-      border-radius: 18px;
-      border: 1px solid rgba(148, 163, 255, 0.35);
-      padding: 10px;
-      scroll-snap-align: center;
-    }
-
-    .slide-title {
-      font-size: 13px;
-      font-weight: 600;
-      margin-bottom: 4px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .slide-tag {
-      font-size: 10px;
-      padding: 3px 7px;
-      border-radius: 999px;
-      border: 1px solid rgba(55, 65, 81, 0.9);
-      color: var(--text-sub);
-    }
-
-    .slide-card img {
-      width: 100%;
-      border-radius: 14px;
-      border: 1px solid rgba(148, 163, 255, 0.7);
-      margin-top: 4px;
-    }
-
-    .slide-desc {
-      font-size: 11px;
-      color: var(--text-sub);
-      margin-top: 6px;
-      line-height: 1.4;
-    }
-
-    .slider-indicator {
-      display: flex;
-      justify-content: center;
-      gap: 6px;
-      margin: 6px 0 10px;
-    }
-
-    .dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: #475569;
-      transition: 0.15s;
-    }
-
-    .dot.active {
-      background: #f97316;
-      transform: scale(1.15);
-    }
   </style>
 </head>
 <body>
+
   <div class="app">
+
     <header>
       <div class="back-btn" onclick="goBack()">←</div>
-      <div class="title-wrap">
-        <div class="title">AI 스타일 결과</div>
-        <div class="sub">카드를 옆으로 넘기면서 스타일 3가지를 비교해 보세요.</div>
+      <div>
+        <div style="font-size:16px;font-weight:600;">AI 스타일 결과</div>
+        <div style="font-size:11px;color:var(--text-sub);">
+          옆으로 넘기면서 3가지 스타일을 확인하세요.
+        </div>
       </div>
     </header>
 
-    <main>
-      <section class="card" id="resultSection">
-        <div class="card-title">추천 스타일 3가지</div>
-        <p class="card-caption">
-          지금은 테스트 단계라 비슷한 사진이 보일 수 있지만,<br />
-          전체적인 스타일 느낌 위주로 봐주세요.
-        </p>
+    <section class="card">
 
-        <!-- 기준 사진 -->
-        <div class="base-photo" id="basePhotoBlock" style="display:none;">
-          <img id="basePhoto" alt="기준 사진" />
-          <div class="base-photo-text">
-            이 사진을 기준으로<br />
-            AI가 3가지 스타일을 가상 적용했습니다.
-          </div>
+      <!-- 기준 사진 -->
+      <div class="base-photo" id="basePhotoBlock" style="display:none;">
+        <img id="basePhoto" />
+        <div style="font-size:11px;color:var(--text-sub);margin-left:10px;">
+          이 사진을 기반으로<br/>AI가 스타일을 생성했습니다.
         </div>
+      </div>
 
-        <!-- 🔥 가로 슬라이드 -->
-        <div class="slider-wrap">
-          <div class="slider" id="slider"></div>
-        </div>
+      <!-- 슬라이드 -->
+      <div class="slider-wrap">
+        <div class="slider" id="slider"></div>
+      </div>
 
-        <!-- ● ● ● 인디케이터 -->
-        <div class="slider-indicator" id="indicator"></div>
+      <!-- 인디케이터 -->
+      <div class="slider-indicator" id="indicator"></div>
 
-        <div class="empty" id="emptyState" style="display:none;">
-          불러올 스타일 정보가 없습니다.<br />
-          처음 화면에서 다시 스타일을 만들어 주세요.
-        </div>
+      <!-- 버튼 -->
+      <div class="btn-row">
+        <button class="btn-secondary" onclick="goBack()">↩ 다시 시도</button>
+        <button class="btn-primary" onclick="goProducts()">🛍 제품 보기</button>
+      </div>
 
-        <div class="btn-row">
-          <button class="btn-secondary" onclick="goBack()">↩ 다시 시도</button>
-          <button class="btn-primary" onclick="goProducts()">🛍 스타일 제품 보기</button>
-        </div>
-        <div class="foot">일부 링크에는 제휴 상품이 포함될 수 있습니다.</div>
-      </section>
-    </main>
+    </section>
+
   </div>
 
   <script>
@@ -326,7 +220,6 @@
 
     const slider = document.getElementById("slider");
     const indicator = document.getElementById("indicator");
-    const emptyState = document.getElementById("emptyState");
     const basePhotoBlock = document.getElementById("basePhotoBlock");
     const basePhotoImg = document.getElementById("basePhoto");
 
@@ -335,33 +228,20 @@
       basePhotoImg.src = basePhoto;
     }
 
-    if (!stylesJson) {
-      emptyState.style.display = "block";
-    } else {
+    if (stylesJson) {
       const styles = JSON.parse(stylesJson);
-
-      const defaultDescs = [
-        "부드러운 인상을 살려주는 자연스러운 스타일입니다. 일상용으로 부담 없이 어울려요.",
-        "조금 더 또렷한 인상을 주는 스타일입니다. 사진 촬영이나 약간 꾸미고 싶은 날에 추천!",
-        "분위기 전환에 좋은 스타일입니다. 스타일 변화를 주고 싶을 때 어울립니다."
-      ];
 
       styles.forEach((style, idx) => {
         const card = document.createElement("div");
         card.className = "slide-card";
 
-        const name = style.name || `스타일 옵션 ${idx + 1}`;
-        const img = style.image;
-        const desc = style.desc || defaultDescs[idx] || defaultDescs[defaultDescs.length - 1];
-
         card.innerHTML = `
-          <div class="slide-title">
-            <span>${name}</span>
-            <span class="slide-tag">옵션 ${idx + 1}</span>
+          <div style="font-size:14px;font-weight:600;margin-bottom:6px;">
+            ${style.name}
           </div>
-          <img src="${img}" alt="${name}" />
-          <div class="slide-desc">${desc}</div>
+          <img src="${style.image}">
         `;
+
         slider.appendChild(card);
 
         const dot = document.createElement("div");
@@ -370,21 +250,18 @@
         indicator.appendChild(dot);
       });
 
-      // 슬라이드 스크롤에 따라 인디케이터 변경
       slider.addEventListener("scroll", () => {
         const cards = slider.querySelectorAll(".slide-card");
-        if (!cards.length) return;
-
         const scrollLeft = slider.scrollLeft;
-        const cardWidth = cards[0].offsetWidth + 18; // gap 포함
-
+        const cardWidth = cards[0].offsetWidth + 16;
         const index = Math.round(scrollLeft / cardWidth);
 
-        document.querySelectorAll(".dot").forEach((d, i) => {
+        indicator.querySelectorAll(".dot").forEach((d, i) => {
           d.classList.toggle("active", i === index);
         });
       });
     }
   </script>
+
 </body>
 </html>
